# betting_ml

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  fetch-data.yml
.pages/: reports_index.html
coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_924c9067598357ef___init___py.html  z_924c9067598357ef_fetch_data_py.html  z_9df5a675c539bf3f___init___py.html  z_9df5a675c539bf3f_test_fetch_data_py.html  z_f1b38b22aeb65474_utils_py.html
data-service/: fetch_data.py  utils.py
profiler/: .coverage  pyinstrument_src_data_service_fetch_data_fetch_play_by_play_data_logic.html  pyinstrument_src_data_service_fetch_data_save_data.html  pyinstrument_src_data_service_tests_test_fetch_data_fetch_play_by_play_data_logic.html  pyinstrument_src_data_service_tests_test_fetch_data_patch.html  pyinstrument_src_data_service_tests_test_fetch_data_test_fetch_play_by_play_data_invalid.html  pyinstrument_src_data_service_tests_test_fetch_data_test_fetch_play_by_play_data_oserror.html  pyinstrument_src_data_service_tests_test_fetch_data_test_fetch_play_by_play_data_valid.html  pyproject.toml
profiler/data/raw/: 2020_pbp_data.parquet
profiler/src/data_service/: Dockerfile  fetch_data.py
profiler/src/data_service/tests/: test_fetch_data.py
profiler/src/exploratory_eda/: raw_eda.py
sh/: run_with_minio.sh
src/data-service/: Dockerfile  fetch_data.py  utils.py
src/data-service/tests/: test_fetch_data.py
src/data_service/: Dockerfile  fetch_data.py  fetch_odds_data.py  utils.py
src/data_service/tests/: test_fetch_data.py
src/exploratory_eda/: raw_eda.py
src/feature_engineering/: Dockerfile  feature_engineering.py
src/feature_engineering/tests/: test_feature_engineering.py
src/features_eda/: corr_matrix.py  features_eda.py
src/inference/: Dockerfile
src/inference_service/: app.py  dummy_data.py  model_loader.py  schemas.py
src/inference_service/tests/: test_inference_service.py
src/model/: xgboost.py
src/model/inference/: run_inference_2025.py
src/model/tests/: test_xgboost.py
src/utils/: model_utils.py  profile_utils.py  utils.py
src/utils/mlflow/: get_best_run.py
src/utils/mlflow/tests/: test_get_best_run.py
src/utils/optuna/: base.py  xgb.py
src/utils/optuna/tests/: test_base.py  test_xgb.py
src/utils/tests/: test_model_utils.py  test_profile_utils.py  test_utils.py
