[project]
name = "sports-betting-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "eric-castellanos",email = "ericcastellanos229@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.fetch-data.dependencies]
polars = "1.30.0"
boto3 = "1.38.23"
botocore = "1.38.24"
pytest = "7.1.1"
click = "8.1.8"

[tool.poetry.group.raw-eda.dependencies]
polars = "1.30.0"
boto3 = "1.38.23"
botocore = "1.38.24"
pytest = "7.1.1"
click = "8.1.8"
ydata-profiling = "4.6.3"
pyarrow = "19.0.1"