[project]
name = "sports-betting-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "eric-castellanos",email = "ericcastellanos229@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.ci.dependencies]
pytest = "7.1.1"
mypy = "1.18.2"
mypy_extensions = "1.1.0"
pylint = "3.3.9"
coverage = "7.10.7"
pyinstrument = "5.1.1"
pandas-stubs = "^2.0"

[tool.poetry.group.fetch-data.dependencies]
polars = "1.30.0"
boto3 = "1.38.23"
botocore = "1.38.24"
click = "8.1.8"

[tool.poetry.group.raw-eda.dependencies]
polars = "1.30.0"
boto3 = "1.38.23"
botocore = "1.38.24"
click = "8.1.8"
ydata-profiling = "4.6.3"
pyarrow = "15.0.2"

[tool.poetry.group.feature-engineering.dependencies]
polars = "1.30.0"
pandera = { version = "0.26.1", extras = ["polars"] }
click = "8.1.8"
boto3 = "1.38.23"
botocore = "1.38.24"
pytest = "7.1.1"

[tool.poetry.group.mlflow.dependencies]
mlflow = "2.14.3"
boto3 = "1.38.23"
psycopg2-binary = "2.9.9"
requests = "2.32.3"
setuptools = "^75.0.0"

[tool.poetry.group.model.dependencies]
xgboost = { version = ">=3.1.2,<4.0.0", markers = "python_version >= '3.10' and python_version < '3.12'" }
polars = "1.30.0"
click = "8.1.8"
scikit-learn = "^1.4.0"
mlflow = "2.14.3"
setuptools = "^75.0.0"
optuna = "^3.6.1"
